--- a/figma-laravel/public/crypto-figma/style.css
+++ b/figma-laravel/public/crypto-figma/style.css
@@ -722,7 +722,7 @@ color: #FFFFFF;
 /* ___________________________________________Mobile Responsive__________________________________ */
 
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 912px){
 .bg-img{
     width: 432px;
 height: 432px;
@@ -740,7 +740,9 @@ margin-left: 0px;
 .slider{
     display: flex;
     flex-direction:column;
-    margin-left: 130px;
+    align-items: center;
+    justify-content: center;
+
 }
 header{
     height: 2300px;
@@ -757,6 +759,7 @@ header{
    width: 300px;
    margin-left: 100px;
    margin-top: 160px;
+
 
 
 }
@@ -878,6 +881,8 @@ footer{
 }
 
 
+
+
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%section6%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
 
 
@@ -981,3 +986,101 @@ color: #000000;
 
 
 
+@media (min-width: 1652px){
+    .slider{
+
+        justify-content: center;
+      margin-top: 530px;
+
+    }
+    .cards{
+        width: 366px;
+    height: 362px;
+    border-radius: 10px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 20px;
+
+
+    }
+    .cards:hover{
+        height: 560px;
+    width: 448px;
+
+    }
+    .overlay{
+        margin-top: 80px;
+
+    }
+    header{
+        height: 1400px;
+    }
+    .main-heading{
+        align-items: center;
+        margin-left: 300px;
+    }
+    .main-heading p{
+        font-size: 100px;
+        width: 140%;
+    }
+    .first-image , .second-image, .third-image,.fourth-image, .fifth-image{
+        width: 240px;
+    height: 310px;
+    margin-left: 40px;
+    margin-top: 25px;
+    }
+    .cards:hover .first-image{
+        width: 340px;
+        height: 350px;
+
+    }
+    .cards:hover .second-image{
+        width: 340px;
+        height: 350px;
+
+    }
+    .cards:hover .third-image{
+        width: 340px;
+        height: 350px;
+
+    }
+    .cards:hover .fourth-image{
+        width: 340px;
+        height: 350px;
+
+    }
+    .cards:hover .fifth-image{
+        width: 340px;
+        height: 350px;
+
+    }
+    .section2 {
+        width: 1524px;
+        height: 320px;
+        background: #F8F5FF;
+        border-radius: 12px;
+        margin: 251px 236px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .para {
+        width: 884px;
+        height: 53px;
+        margin-left: 550px;
+        justify-content: center;
+        align-items: center;
+    }
+    .dotline1{
+        margin-left: 1250px;
+    }
+    .dotline2{
+        margin-left: 600px;
+    }
+    .trader{
+        margin-left: 700px;
+    }
+    .testmonial{
+        margin-left:900px
+    }
+}
