--- a/figma-laravel/public/crypto-figma/style.css
+++ b/figma-laravel/public/crypto-figma/style.css
@@ -36,7 +36,8 @@ font-style: normal;
 font-weight: 700;
 font-size: 66px;
 line-height: 150%;
-color: #F7F7F7
+color: #F7F7F7;
+justify-content: center;
 }
 .top-text{
     padding-top: 50px;
@@ -435,6 +436,7 @@ height: 72px;
 
 
 
+
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Section4$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ */
 
 
@@ -746,7 +748,7 @@ margin-left: 0px;
 }
 header{
     height: 2300px;
-    width: 130%;
+    width:c
 
 }
 .cards:hover .overlay{
@@ -986,16 +988,17 @@ color: #000000;
 
 
 
-@media (min-width: 1652px){
+@media (min-width: 1301px){
     .slider{
 
         justify-content: center;
       margin-top: 530px;
 
+
     }
     .cards{
-        width: 366px;
-    height: 362px;
+        width: 456px;
+    height: 452px;
     border-radius: 10px;
         align-items: center;
         justify-content: center;
@@ -1004,83 +1007,110 @@ color: #000000;
 
     }
     .cards:hover{
-        height: 560px;
-    width: 448px;
+        height: 660px;
+    width: 548px;
 
     }
     .overlay{
-        margin-top: 80px;
+        margin-top: 72px;
 
     }
     header{
-        height: 1400px;
+        height: 1530px;
+        width: 100%;
     }
     .main-heading{
         align-items: center;
-        margin-left: 300px;
+        margin-left: 550px;
     }
     .main-heading p{
         font-size: 100px;
         width: 140%;
     }
     .first-image , .second-image, .third-image,.fourth-image, .fifth-image{
-        width: 240px;
-    height: 310px;
+        width: 340px;
+    height: 410px;
     margin-left: 40px;
     margin-top: 25px;
     }
     .cards:hover .first-image{
-        width: 340px;
-        height: 350px;
+        width: 440px;
+        height: 450px;
 
     }
     .cards:hover .second-image{
-        width: 340px;
-        height: 350px;
+        width: 440px;
+        height: 450px;
 
     }
     .cards:hover .third-image{
-        width: 340px;
-        height: 350px;
+        width: 440px;
+        height: 450px;
 
     }
     .cards:hover .fourth-image{
-        width: 340px;
-        height: 350px;
+        width: 440px;
+        height: 450px;
 
     }
     .cards:hover .fifth-image{
-        width: 340px;
-        height: 350px;
+        width: 440px;
+        height: 450px;
 
     }
     .section2 {
-        width: 1524px;
-        height: 320px;
+        width: 1824px;
+        height: 420px;
         background: #F8F5FF;
         border-radius: 12px;
-        margin: 251px 236px;
+        margin: 251px 336px;
         display: flex;
         align-items: center;
         justify-content: space-around;
     }
     .para {
         width: 884px;
-        height: 53px;
-        margin-left: 550px;
+        height: 63px;
+        margin-left: 800px;
         justify-content: center;
         align-items: center;
     }
     .dotline1{
-        margin-left: 1250px;
+        margin-left: 1430px;
     }
     .dotline2{
-        margin-left: 600px;
+        margin-left: 1086px;
+    }
+    .dotline3{
+        margin-left: 784px;
     }
     .trader{
-        margin-left: 700px;
+        margin-left: 950px;
     }
     .testmonial{
-        margin-left:900px
+        margin-left:1000px
+    }
+    .card3{
+        width: 100px;
+    }
+    .cloud, .arrow, .mobile ,.doller{
+        margin-left:8px
+
+    }
+    .right-footer{
+        margin-left: 1210px;
+    }
+    .get-start{
+        margin-left: -2060px;
+    }
+    .cards2 {
+        display: flex;
+        /* justify-content: space-around; */
+        margin: 0px 450px;
+        gap: 300px;
+        gap: -28px;
+    }
+    .para2{
+        margin-left:-50px;
     }
 }
