--- a/figma-laravel/public/superball/style.css
+++ b/figma-laravel/public/superball/style.css
@@ -371,6 +371,8 @@ color: #FCFCFC;
 }
 .reserve{
 opacity: 0;
+width: 270px;
+    height: 64px;
 }
 
 
@@ -474,7 +476,7 @@ margin-left: 257px;
     display: grid;
     grid-template-columns: auto auto;
     margin-left: 45px;
-    margin-top: 180px;
+    margin-top: 280px;
 }
 
 .card2{
@@ -513,16 +515,16 @@ margin-left: 257px;
 }
 .reserve {
     opacity: 1;
-    font-family: 'Encode Sans';
-font-style: normal;
-font-weight: 900;
-font-size: 32px;
-line-height: 64px;
+    width: 249px;
+    height: 64px;
+margin-top: 80px;
+margin-left: 100px;
+margin-bottom: 20px;
 /* identical to box height, or 200% */
 
 text-transform: uppercase;
 color:white;
-border: 1px solid #FCFCFC;
+
 
 }
 }
