--- a/figma-laravel/public/crypto-figma/style.css
+++ b/figma-laravel/public/crypto-figma/style.css
@@ -50,6 +50,7 @@ color: #8F60FF;
 margin-left: 164px;
 }
 .slider{
+    width: 100%;
     display: flex;
     gap: 25px;
     margin-top: 188px;
@@ -58,12 +59,11 @@ margin-left: 164px;
 }
 
 .cards{
-    width: 246px;
+    width: 20%;
+    
 height: 242px;
 border-radius: 10px;
 margin-top: -40px;
-
-
 }
 
 .first{
@@ -104,12 +104,13 @@ margin-left: 40px;
 }
 .fifth{
     background: #DAD3FE;
+    margin-right: -20px;
 }
 .fifth-image{
     width: 180px;
 height: 180px;
 margin-top: 30px;
-margin-left: 40px;
+text-align: center;
 }
 .account {
     font-family: 'Verdana';
@@ -149,7 +150,7 @@ color: #6B7280;
 .cards:hover {
 
     height: 460px;
-    width: 348px;
+    width: 25%;
     border: solid white 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s ease;
@@ -989,129 +990,3 @@ color: #000000;
 
 
 
-@media (min-width: 1301px){
-    .slider{
-
-        justify-content: center;
-      margin-top: 530px;
-
-
-    }
-    .cards{
-        width: 456px;
-    height: 452px;
-    border-radius: 10px;
-        align-items: center;
-        justify-content: center;
-        margin-left: 20px;
-
-
-    }
-    .cards:hover{
-        height: 660px;
-    width: 548px;
-
-    }
-    .overlay{
-        margin-top: 72px;
-
-    }
-    header{
-        height: 1530px;
-        width: 100%;
-    }
-    .main-heading{
-        align-items: center;
-        margin-left: 550px;
-    }
-    .main-heading p{
-        font-size: 100px;
-        width: 140%;
-    }
-    .first-image , .second-image, .third-image,.fourth-image, .fifth-image{
-        width: 340px;
-    height: 410px;
-    margin-left: 40px;
-    margin-top: 25px;
-    }
-    .cards:hover .first-image{
-        width: 440px;
-        height: 450px;
-
-    }
-    .cards:hover .second-image{
-        width: 440px;
-        height: 450px;
-
-    }
-    .cards:hover .third-image{
-        width: 440px;
-        height: 450px;
-
-    }
-    .cards:hover .fourth-image{
-        width: 440px;
-        height: 450px;
-
-    }
-    .cards:hover .fifth-image{
-        width: 440px;
-        height: 450px;
-
-    }
-    .section2 {
-        width: 1824px;
-        height: 420px;
-        background: #F8F5FF;
-        border-radius: 12px;
-        margin: 251px 336px;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-    }
-    .para {
-        width: 884px;
-        height: 63px;
-        margin-left: 800px;
-        justify-content: center;
-        align-items: center;
-    }
-    .dotline1{
-        margin-left: 1430px;
-    }
-    .dotline2{
-        margin-left: 1086px;
-    }
-    .dotline3{
-        margin-left: 784px;
-    }
-    .trader{
-        margin-left: 950px;
-    }
-    .testmonial{
-        margin-left:1000px
-    }
-    .card3{
-        width: 100px;
-    }
-    .cloud, .arrow, .mobile ,.doller{
-        margin-left:8px
-
-    }
-    .right-footer{
-        margin-left: 1210px;
-    }
-    .get-start{
-        margin-left: -2060px;
-    }
-    .cards2 {
-        display: flex;
-        /* justify-content: space-around; */
-        margin: 0px 450px;
-        gap: 300px;
-        gap: -28px;
-    }
-    .para2{
-        margin-left:-50px;
-    }
-}
