--- a/figma-laravel/public/crypto-figma/style1.css
+++ b/figma-laravel/public/crypto-figma/style1.css
@@ -1,11 +1,15 @@
-header{
-    width: auto;
+/* header{
+    width: 100% !important;
     height: 100px;
     background: #08001A;
+} */
+@font-face {
+    font-family: 'IvyMode';
+    src: url('../crypto-figma/font1/IvyMode-Bold.ttf');
 }
 .section1{
-    width:auto;
-height: 880px;
+    width:100%;
+height: 950px;
 background-color: #08001A;
 background-image: url("/crypto-figma/images/union.png");
 }
@@ -20,14 +24,14 @@ color: #8F60FF;
 margin-left: 164px;
 }
 .title{
-    width: auto;
-height: 216px;
+    width: 100%;
+
 align-items: center;
 padding-top: 118px;
 justify-content: center;
 }
 .title p{
-    width: auto;
+
     font-family: 'IvyMode';
 font-style: normal;
 font-weight: 700;
@@ -40,23 +44,22 @@ text-align: center;
 color: #F7F7F7;
 
 }
+
 .slider{
+    width: 100%;
     display: flex;
     gap: 25px;
-    margin-top: 188px;
+    margin-top: 250px;
     margin-bottom: 26px;
-    margin-left: -30px;
-    justify-content: center;
-    align-items: center;
+
 }
 
 .cards{
-    width: 246px;
+    width: 20%;
+
 height: 242px;
 border-radius: 10px;
 margin-top: -40px;
-
-
 }
 
 .first{
@@ -97,12 +100,13 @@ margin-left: 40px;
 }
 .fifth{
     background: #DAD3FE;
+
 }
 .fifth-image{
     width: 180px;
 height: 180px;
 margin-top: 30px;
-margin-left: 40px;
+text-align: center;
 }
 .account {
     font-family: 'Verdana';
@@ -142,7 +146,7 @@ color: #6B7280;
 .cards:hover {
 
     height: 460px;
-    width: 348px;
+    width: 25%;
     border: solid white 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s ease;
@@ -191,30 +195,166 @@ color: #6B7280;
 
 }
 
+/* ===========================================Section2========================================= */
 
-@media screen and (min-width: 1301px) {
+.section2{
+    width: 80%;
+height: 231px;
+background: #F8F5FF;
+border-radius: 12px;
+margin-top:251px;
+margin-bottom: 251px;
+margin-left:10%;
+margin-right: 10%;
+display: flex;
+justify-content: space-around;
+}
+.card2{
+    width:25%;
+height: 100%;
+background: #F8F5FF;
 
-   .top-text{
-    position: relative;
-   }
-
-   .title{
-    width: auto;
-    height: auto;
-   }
-   .title p{
-    font-size:120px;
-   }
-   .cards{
-    width: auto;
-    height: auto;
-   }
-
-   .cards:hover{
-    width: auto;
-    height:700px;
-    margin:0px;
-   }
 
 }
+.card2:hover{
+    background: #FFFFFF;
+box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+border-radius: 18px;
+}
+.B-logo{
+    margin-top: 22px;
+    margin-left: 24px;
+    width: 40px;
+    height: 40px;
+}
+.M-logo{
+    margin-top: 22px;
+    margin-left: 24px;
+    width: 40px;
+    height: 46px;
+}
+.D-logo{
+    margin-top: 22px;
+    margin-left: 24px;
+    width: 28px;
+height: 44px;
 
+}
+.F-logo{
+    margin-top: 22px;
+    margin-left: 24px;
+    width: 35px;
+    height:38px;
+}
+.info{
+    display: flex;
+    margin-left: 24px;
+
+}
+.bit-coin{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+
+color: #515151;
+}
+.diff{
+    width: 56px;
+height: 26px;
+background: #6DBC89;
+border-radius: 8px;
+color: white;
+margin-left: 27px;
+padding-left: 3px;
+}
+.low{
+    width: 56px;
+    height: 26px;
+    background:  #F27247;
+    border-radius: 8px;
+    color: white;
+    margin-left: 27px;
+    padding-left: 3px;
+    }
+.bold{
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+line-height: 150%;
+margin-left: 24px;
+/* identical to box height, or 33px */
+
+
+color: #2F2D2D;
+margin-left: 24px;
+margin-top: 10px;
+}
+.light{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+
+color: #515151;
+margin-left: 24px;
+margin-top: -10px;
+}
+
+
+
+
+
+@media only screen and (max-width:600px) {
+
+    .section1{
+        width: 150%;
+        min-height: 2200px;
+    }
+    .slider{
+        margin-top: 100px;
+        display: flex;
+        gap:50px;
+        flex-direction: column;  align-items: center;
+        justify-content: center;
+    }
+    .cards{
+        width: 50%;
+        text-align: center;
+
+    }
+    .cards:hover{
+        margin-top:-30px;
+        width: 60%;
+        gap:50px;
+    }
+
+
+
+
+    .section2{
+        display: flex;
+        flex-direction:column;
+        height: 900px;
+        width: 100%;
+        align-items: center;
+        margin-left: 120px;
+
+
+
+
+
+     }
+     .card2{
+         margin-left: 40px;
+         width: 70%;
+     }
+
+}
