--- a/figma-laravel/public/crypto-figma/style1.css
+++ b/figma-laravel/public/crypto-figma/style1.css
@@ -312,6 +312,405 @@ margin-top: -10px;
 
 
 
+/* =================================================section3======================================== */
+
+.HIW{
+    font-family: 'Verdana';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 70px;
+    text-align: center;
+    color: #2F2D2D;
+    }
+
+.para{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+text-align: center;
+/* or 24px */
+
+
+width: 100%;
+
+color: #515151;
+}
+.images{
+    width: 80%;
+    height: 231px;
+
+    border-radius: 12px;
+    margin-top:76pxpx;
+    margin-bottom: 251px;
+    margin-left:10%;
+    margin-right: 10%;
+    display: flex;
+    justify-content: space-around;
+
+
+
+
+ }
+ .step{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+text-align: center;
+
+color: #515151;
+margin-left: 25px;
+margin-top: 70px;
+}
+.download{
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+/* identical to box height, or 27px */
+
+text-align: center;
+
+color: #000000;
+
+border: 0.5px solid #FFFFFF;
+margin-left: 25px;
+margin-top: 20px;
+}
+.para2{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* or 24px */
+
+text-align: center;
+margin-left: 25px;
+color: #515151;
+width: 246px;
+height: 72px;
+}
+.line{
+    margin-top: -300px;
+}.cloud{
+    margin-left: 100px;
+}
+.images2{
+    width: 55%;
+    height: 231px;
+    border-radius: 12px;
+    margin-top:-451px;
+    margin-bottom: 251px;
+    margin-left:20%;
+    margin-right: 25%;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* =================================================Section4================================= */
+
+
+
+.section4{
+    margin-top: 180px;
+    width: auto;
+    height: auto;
+
+}
+.top{
+    margin-left: 71px;
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 70px;
+/* identical to box height, or 175% */
+width: 369px;
+height: 70px;
+text-align: center;
+
+color: #2F2D2D;
+}
+.top p{
+
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+
+color: #515151;
+
+}
+.boy{
+    width: 471px;
+height: 471px;
+}
+.card4{
+    display: flex;
+    margin-top: 52px;
+    margin-left:-10px;
+    margin-bottom: -60px;
+}
+.logo{
+    width: 44px;
+height: 44px;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+.disc{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+margin-top: 50px;
+margin-left: 15px;
+
+color: #515151;
+}
+.disc p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+
+color: #2F2D2D;
+
+}
+/* ================================================Section5===================================== */
+
+.section5{
+    background-image: url("/crypto-figma/images/bg.png");
+    margin-top: 180px;
+}
+.trader{
+    width: 100%;
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 70px;
+/* or 175% */
+text-align: center;
+
+color: #2F2D2D;
+}
+.cards2{
+    display: flex;
+    justify-content: space-around;
+    margin: 0px 150px;
+}
+.card5{
+    margin-top: 40px;
+    width: 290px;
+height: 364px;
+    background: #FFFFFF;
+box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+border-radius: 18px;
+
+}
+.image{
+    width: 90px;
+height: 67px;
+margin-top: 50px;
+margin-left: 100px;
+}
+.buy{
+    margin-top: 40px;
+}
+.buy p{
+
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+/* identical to box height, or 27px */
+
+text-align: center;
+
+color: #000000;
+
+border: 0.5px solid #FFFFFF;
+
+}
+.para3{
+    margin-top: 40px;
+}
+.para3 p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* or 24px */
+
+text-align: center;
+
+color: #515151;
+
+}
+.button{
+width: 121px;
+height: 36px;
+border: 1px solid #8F60FF;
+border-radius: 4px;
+margin-top:24px;
+margin-left: 84px;
+padding: 7px 13px;
+}
+.button p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 20px;
+/* identical to box height, or 125% */
+
+
+color: #8F60FF;
+
+}
+
+/* =======================================Footer========================== */
+footer{
+    margin-top: 100px;
+    width: 100%;
+height: 382px;
+background: #FFFFFF;
+background-image: url("/crypto-figma/images/bg.png");
+box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+display: flex;
+justify-content: space-between;
+
+}
+
+
+.left-footer{
+    font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+
+/* identical to box height, or 27px */
+
+text-align: center;
+margin-top: 100px;
+margin-left:118px;
+color: #000000;
+}
+.left-footer p{
+    height: 24px;
+    margin-top: 24px;
+    margin-left:118px;
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+text-align: center;
+
+color: #515151;
+}
+.right-footer{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 26px;
+/* identical to box height */
+
+letter-spacing: -0.231818px;
+
+color: #8F60FF;
+margin-right: 100px;
+margin-top: 100px;
+
+}
+.right-footer p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 22px;
+margin-top: 15px;
+/* identical to box height */
+
+letter-spacing: -0.204545px;
+
+color: #515151;
+}
+.ready
+{
+    margin-left:-400px;
+}
+.get-start{
+    background: #8F60FF;
+border-radius: 4px;
+width: 175px;
+height: 50px;
+margin-left: -1000px;
+margin-top: 230px;
+padding-left: 45px;
+padding-top: 10px;
+}
+.get-start p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 26px;
+/* identical to box height */
+
+letter-spacing: -0.231818px;
+
+color: #FFFFFF;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width:600px) {
 
     .section1{
@@ -345,16 +744,176 @@ margin-top: -10px;
         height: 900px;
         width: 100%;
         align-items: center;
-        margin-left: 120px;
+        margin-left: 100px;
 
 
 
 
 
      }
+     .section3{
+        text-align: center;
+        margin-left: 150px;
+
+     }
+     .HIW p{
+        font-size: 32px;
+     }
+     .cloud{
+        margin-left: 0px;
+     }
+     .images{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 600px;
+     }
+     .images2{
+        display: none;
+     }
+
      .card2{
          margin-left: 40px;
          width: 70%;
      }
+     .HIW{
+        align-items: center;
+     }
 
+
+
+
+
+
+
+
+    .card4{
+        margin-left: 30px;
+
+    }
+    .boy img{
+        width: 371px;
+        height: 371px;
+        margin-top: 100px;
+        margin-left: 70px;
+    }
+}
+
+
+.test{
+    margin-left: 70px;
+}
+
+
+.section6{
+    margin-top: 180px;
+
+
+}
+
+.part{
+    width: 100%;
+height: 289px;
+
+background: #FFFFFF;
+/* opacity: 0.6; */
+box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+border-radius: 20px;
+}
+.part-top{
+    display:flex;
+
+    margin-left: 40px;
+
+}
+.girl-image{
+    margin-top: 56px;
+
+}
+.part-title{
+    margin-top: 50px;
+    margin-left: 20px;
+}
+.light1{
+    margin-top:-20px
+}
+.bold1{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+
+font-size: 20px;
+line-height: 15px;
+/* identical to box height */
+
+text-align: center;
+
+color: #000000;
+}
+.sign{
+    margin-left: 56px;
+    margin-top: 46px;
+}
+.para4{
+    margin-top: 33px;
+    width: 253px;
+height: 96px;
+}
+.para4 p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+margin-left: 40px;
+color: #6B7280;
+text-align: start;
+
+}
+.testmonial{
+    width: 262px;
+height: 60px;
+align-items: center;
+justify-content: center;
+}
+.test p{
+
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 60px;
+/* identical to box height */
+
+
+
+
+color: #000000;
+}
+.card-section6{
+    width: 80%;
+    height: 231px;
+
+    border-radius: 12px;
+    margin-top:76pxpx;
+    margin-bottom: 251px;
+    margin-left:10%;
+    margin-right: 10%;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+
+@media only screen and (min-width:1px) and (max-width: 600px){
+
+
+    .part{
+        margin-bottom: 20px;
+        margin-left: 50px;
+    }
+    .section6{
+        display: flex;
+        flex-direction: column;
+    }
 }
