--- a/figma-laravel/public/crypto-figma/style.css
+++ b/figma-laravel/public/crypto-figma/style.css
@@ -544,7 +544,7 @@ color: #2F2D2D;
 .cards2{
     display: flex;
     justify-content: space-around;
-    margin: 0px 150px;
+    margin-top: 150p;
 }
 .card5{
     margin-top: 40px;
@@ -642,7 +642,7 @@ line-height: 150%;
 
 text-align: center;
 margin-top: 100px;
-margin-left:118px
+margin-left:118px;
 color: #000000;
 }
 .left-footer p{
